# nfiq2-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build_android.sh  build_python.sh  patch_maturin_wheel.sh  pyproject.toml
.github/workflows/: ci.yaml
bindings/android/: settings.gradle.kts
bindings/android/app/: build.gradle.kts
bindings/android/app/src/androidTest/java/ai/seventhsense/sdk/nbis/: ExampleInstrumentedTest.kt
bindings/android/app/src/androidTest/java/com/sensecrypt/sdk/nbis/: ExampleInstrumentedTest.kt
bindings/android/app/src/main/: AndroidManifest.xml
bindings/android/app/src/main/java/ai/seventhsense/sdk/: .gitignore
bindings/android/app/src/test/java/ai/seventhsense/sdk/nbis/: ExampleUnitTest.kt
bindings/android/app/src/test/java/com/sensecrypt/sdk/nbis/: ExampleUnitTest.kt
bindings/android/gradle/: libs.versions.toml
bindings/android/gradle/wrapper/: gradle-wrapper.properties
bindings/python/tests/: README.md  test_nfiq2.py
ext/NFIQ2-2.3.0/: CMakeLists.txt
ext/libbiomeval-10.0/src/include/: be_io_compressedrecstore.h  be_io_filerecstore.h
src/: api.rs  errors.rs  ffi.rs  lib.rs
src/cwrapper/: nfiq_wrapper.cpp  nfiq_wrapper.h
