[package]
name = "nfiq2-rs"
version = "0.1.0"
edition = "2021"

authors = ["Varun Chatterji <varun@seventhsense.ai>"]
description = "A Rust binding to the National Institute of Standards and Technology (NIST) Fingerprint Image Quality (NFIQ)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Seventh-Sense-Artificial-Intelligence/nfiq2-rs"
homepage = "https://github.com/Seventh-Sense-Artificial-Intelligence/nfiq2-rs"
documentation = "https://docs.rs/nfiq2-rs"
keywords = ["biometrics", "fingerprint", "nfiq", "nfiq2"]
categories = ["algorithms", "api-bindings"]

# Optional but recommended:
exclude = ["/.github", "/examples", "test_data", "scripts"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi_bindgen.rs"

[lib]
crate-type = ["lib", "cdylib"]
name = "nfiq2" 

[build-dependencies]
walkdir = "2.5.0"
cc = "1.2.29"
cmake = "0.1"
uniffi = { version = "0.29.3", features = ["build", "cli"] }

[dependencies]
image = "0.25.6"
imageproc = "0.25.0"
libc = "0.2.174"
once_cell = "1.21.3"
thiserror = "2.0.12"
uniffi = { version = "0.29.3", features = ["cli"] }

